fix nav width, align blocks in rows for mobile landscape

--- a/src/components/blocks/block.module.scss
+++ b/src/components/blocks/block.module.scss
@@ -50,7 +50,7 @@
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px), (max-height: 480px) {
     .block {
         margin: auto;
         @include flex (row, center);
